# image-optimization

./: .gitignore  pyproject.toml
.github/workflows/: python.yaml
image_optimizer_cli/: cli.py
src/: cli.py  model.py
tests/: test_resize.py
